Trying to fix a big white space at the bottom of the home page

--- a/NightCrusadeTitans/src/app/home-page/home-page.component.css
+++ b/NightCrusadeTitans/src/app/home-page/home-page.component.css
@@ -1,10 +1,18 @@
 body{
     display: flex;
     flex-direction: column;
+    margin-bottom: 0;
+    padding-bottom: 0; /*Trying to fix the big white space at the bottom of the page*/
 }
 
-#cardContainer, #mapContainer {
+#reportList, #mapContainer {
     flex: 1 1 0;
-    width: 100%;
+    width: calc(100%-16px);
+    margin: 0 16px 24px;
+}
+
+#reportList {
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
